<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_weight="30"
    android:background="#30b36b05"
    >

    <View android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/app_name"
        android:textSize="@dimen/Title"
        android:background="@drawable/sunset_background"
        android:textColor="#fce1bb"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:text="@string/secondTitle"
        android:textSize="@dimen/Paragraph"
        android:layout_below="@id/tv_app_name"
        android:layout_marginEnd="20dp"/>
    <Button
        android:id="@+id/boutonShortGame"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonSize"
        android:layout_alignEnd="@id/strut"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/secondTitle"
        android:text="@string/boutonShortGame"
        android:backgroundTint="#45bf57"/>

    <Button
        android:id="@+id/boutonMediumGame"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonSize"
        android:layout_below="@id/secondTitle"
        android:layout_toEndOf="@id/boutonShortGame"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@id/strut"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/boutonMediumGame"
        android:backgroundTint="#dec928"/>

    <Button
        android:id="@+id/boutonLongGame"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:layout_below="@id/boutonMediumGame"
        android:layout_centerHorizontal="true"
        android:text="@string/boutonLongGame"
        android:backgroundTint="#de7d28"/>

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountName"
        android:layout_below="@id/boutonLongGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/Paragraph"/>

    <Button
        android:id="@+id/boutonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:text="@string/boutonLogout" />


</RelativeLayout>