<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#30b36b05"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/hello_world"
        android:textSize="@dimen/Title"
        />
    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:text="@string/secondTitle"
        android:textSize="@dimen/Paragraph"
        android:layout_below="@id/tv_title"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:id="@+id/connexion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connexion"
        android:layout_marginTop="150dp"
        />
    <TextView
        android:id="@+id/nomUtilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/connexion1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        />
    <EditText
        android:id="@+id/valueUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomUtilisateur"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:autofillHints="name"
        android:labelFor="@id/valueUsername"
        android:inputType="text"

        />
    <TextView
        android:id="@+id/motdepasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motdepasse"
        android:layout_below="@id/valueUsername"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        />
    <EditText
        android:id="@+id/valuePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/motdepasse"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:autofillHints="name"
        android:labelFor="@id/valuePassword"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/boutonConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/valuePassword"
        android:text="@string/boutonConnexion"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/boutonCreerCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/boutonConnexion"
        android:text="@string/createAccount"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>