<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <ImageView
        android:layout_weight="50"
        android:id="@+id/cover"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/cover"
        android:textSize="@dimen/Paragraph"
        />

    <TextView
        android:layout_weight="1"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textSize="@dimen/Paragraph"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_weight="1"
            android:id="@+id/editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/editor"
            android:textSize="@dimen/Paragraph"
            />

        <TextView
            android:layout_weight="1"
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/release_date"
            android:textSize="@dimen/Paragraph"
            />

    </LinearLayout>

</LinearLayout>




